--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body,
+#root {
+  block-size: 100vh;
+  inline-size: 100vw;
+  max-block-size: 100vh;
+  max-inline-size: 100vw;
+  min-block-size: 100vh;
+  min-inline-size: 100vw;
+
+  overflow: clip;
+}
+html,
+body {
+  display: grid;
+}
+
+#root {
+  @apply grid-stack;
+}
